    - fix icon downloading from extras.ubuntu.com and support possible
      country mirrors
  * softwarecenter/view/appdetailsview_gtk.py:
    - show pulse once the install starts (LP: #637377)
  * softwarecenter/apt/aptcache.py:
    - add installed_count to the cache
  * softwarecenter/view/appdetailsview_gtk.py:
    - support bullets with " o item" in the description 
      (LP: #584147)

  [ Gary Lasker ]
  * softwarecenter/view/softwarepane.py:
    - show a more reasonable number for hidden technical items
      in the installed view of "Provided by Ubuntu" 
  * softwarecenter/enums.py,
    softwarecenter/utils.py,
    softwarecenter/view/appdetailsview_gtk.py,
    softwarecenter/view/softwarepane.py,
    softwarecenter/view/widgets/imagedialog.py:
    - create an alternative spinner widget that uses an animated gif
      for when gtk.Spinner is not available (LP: #637422) 
  * softwarecenter/view/appview.py:
    - fix crash in _on_transaction_finished (LP: #631132) 
    - enable show/hide technical items for "Installed Software"
  * softwarecenter/app.py:
    - fix crash in on_menu_edit_activate (LP: #624913) 

 -- Gary Lasker <gary.lasker@canonical.com>  Wed, 15 Sep 2010 02:03:10 -0400

software-center (2.1.19) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/widgets/mkit.py:
    - fix crash during action_bar refresh (LP: #635044)
  * softwarecenter/backend/channel.py:
    - always display the partner channel, even if its
      source is not enabled (LP: #635003) 
  * softwarecenter/db/application.py,
    softwarecenter/db/database.py,
    softwarecenter/view/appview.py,
    softwarecenter/view/softwarepane.py:
    - make StoreDatabase.get_appname return None if the
      name is not defined in the xapian doc
    - consolidate code to generate application name and
      summary for display in the UI to a single place
    - wire applist, appdetails and the navigation bar
      to use it (LP: #636004)

  [ Kiwinote ]